--- a/index.html
+++ b/index.html
@@ -1148,7 +1148,7 @@ BP 20000 Libreville</div>
                                 <!-- Mbolo -->
                                 <div class="partner-card featured" data-partner="mbolo">
                                     <div class="partner-banner">
-                                        <img src="assets/restauration.jpg" alt="Mbolo Restaurant" class="banner-image">
+                                        <img src="assets/logos/mbolo.png" alt="Mbolo Restaurant" class="banner-image">
                                         <div class="partner-overlay">
                                             <div class="partner-logo-text">MBOLO</div>
                                         </div>
@@ -1174,7 +1174,7 @@ BP 20000 Libreville</div>
                                 <!-- KFC Gabon -->
                                 <div class="partner-card featured" data-partner="kfc">
                                     <div class="partner-banner">
-                                        <img src="assets/mont_blanc.jpg" alt="KFC Gabon" class="banner-image">
+                                        <img src="assets/logos/kfc.jpg" alt="KFC Gabon" class="banner-image">
                                         <div class="partner-overlay kfc-overlay">
                                             <div class="partner-logo-text">KFC</div>
                                         </div>
@@ -1200,7 +1200,7 @@ BP 20000 Libreville</div>
                                 <!-- Paul Gabon -->
                                 <div class="partner-card featured" data-partner="paul">
                                     <div class="partner-banner">
-                                        <img src="assets/mont_blanSc.jpg" alt="Paul Gabon" class="banner-image">
+                                        <img src="assets/paul.jpg" alt="Paul Gabon" class="banner-image">
                                         <div class="partner-overlay paul-overlay">
                                             <div class="partner-logo-text">PAUL</div>
                                         </div>
