--- a/index.html
+++ b/index.html
@@ -96,18 +96,22 @@
         <div class="content" id="content">
             <!-- Page Accueil -->
             <div class="page home-page active" id="home-page">
-                <div class="balance-card">
-                    <div class="balance-title">Solde principal</div>
-                    <div class="balance-amount"><span class="currency-symbol">F</span> <span class="currency-code">cfa</span> 780 245,<small>00</small></div>
-                    <div class="balance-details">
-                        <div class="balance-detail">
-                            <div>Revenus mensuels</div>
-                            <div class="detail-value"><span class="currency-symbol">F</span> <span class="currency-code">cfa</span> 245 200,<small>00</small></div>
-                        </div>
-                        <div class="divider"></div>
-                        <div class="balance-detail">
-                            <div>Dépenses mensuelles</div>
-                            <div class="detail-value"><span class="currency-symbol">F</span> <span class="currency-code">cfa</span> 133 274,<small>00</small></div>
+                <!-- Carte de solde principale responsive -->
+                <div class="main-balance-card">
+                    <div class="clouds-background"></div>
+                    <div class="balance-content">
+                        <div class="balance-title">Solde principal</div>
+                        <div class="balance-amount"><span class="currency-symbol">F</span> <span class="currency-code">cfa</span> 780 245,<small>00</small></div>
+                        <div class="balance-details">
+                            <div class="balance-detail">
+                                <div>Revenus mensuels</div>
+                                <div class="detail-value"><span class="currency-symbol">F</span> <span class="currency-code">cfa</span> 245 200,<small>00</small></div>
+                            </div>
+                            <div class="divider"></div>
+                            <div class="balance-detail">
+                                <div>Dépenses mensuelles</div>
+                                <div class="detail-value"><span class="currency-symbol">F</span> <span class="currency-code">cfa</span> 133 274,<small>00</small></div>
+                            </div>
                         </div>
                     </div>
                 </div>
