--- a/compte-pro.html
+++ b/compte-pro.html
@@ -5250,7 +5250,7 @@
                 <div class="welcome-section">
                     <div class="welcome-text">Bonjour, Godwin BATOLA</div>
                     <div class="balance-amount">5,240,500 Fcfa</div>
-                    <div class="account-number">Compte: GA21 XXXX XXXX XXXX XXXXXXXX 789</div>
+                    <div class="account-number">Compte: GA21 3042 0001 2345 6789 0304</div>
                 </div>
 
                 <div class="quick-actions">
@@ -6937,7 +6937,7 @@
                 name: "Godwin BATOLA",
                 email: "godwin.batola@gmail.com",
                 phone: "+241 01 23 45 67",
-                account: "GA21 XXXX XXXX XXXX XXXXXXXX 789",
+                account: "GA21 3042 0001 2345 6789 0304",
                 balance: 5240500,
                 professionalBalance: 2450800
             },
@@ -6968,7 +6968,7 @@
                     id: 3,
                     name: "SOGEA SATOM",
                     type: "client",
-                    account: "GA21 XXXX XXXX XXXX XXXXXXXX 789",
+                    account: "GA21 3042 0001 2345 6789 0304",
                     bank: "BGFI",
                     email: "comptabilité@sogeasatom.ga",
                     phone: "+241 01 34 56 78",
@@ -7247,7 +7247,7 @@
                 <div class="recipient-item">
                     <div class="recipient-info">
                         <div class="recipient-name">SOGEA SATOM</div>
-                        <div class="recipient-account">GA21 XXXX XXXX XXXX XXXXXXXX 789</div>
+                        <div class="recipient-account">GA21 3042 0001 2345 6789 0304</div>
                     </div>
                     <div class="recipient-amount">Fcfa 300,000</div>
                 </div>
