--- a/index.html
+++ b/index.html
@@ -80,12 +80,6 @@
         <div class="header">
             <div class="header-title">KB</div>
             <div class="header-actions">
-                <div class="theme-toggle" onclick="toggleTheme()" title="Basculer le thème">
-                    <div class="theme-toggle-slider">
-                        <i class="fas fa-sun theme-icon light"></i>
-                        <i class="fas fa-moon theme-icon dark"></i>
-                    </div>
-                </div>
                 <div class="header-icon" onclick="switchTab('profile')">
                     <i class="fas fa-user"></i>
                 </div>
@@ -771,7 +765,7 @@
                         
                         <div class="iban-number">
                             <div class="iban-label">IBAN</div>
-                            <div class="iban-value">GA21 XXXX XXXX XXXX XXXXXXXX 304</div>
+                            <div class="iban-value">GA21 3042 0001 2345 6789 0304</div>
                             <button class="copy-button" onclick="copyIban()">
                                 <i class="fas fa-copy"></i>
                             </button>
@@ -1066,6 +1060,24 @@ BP 20000 Libreville</div>
                                 <div class="setting-toggle">
                                     <input type="checkbox" id="notif-toggle" checked>
                                     <label for="notif-toggle" class="toggle-slider"></label>
+                                </div>
+                            </div>
+
+                            <div class="setting-item" onclick="toggleTheme()">
+                                <div class="setting-icon">
+                                    <i class="fas fa-palette"></i>
+                                </div>
+                                <div class="setting-content">
+                                    <h4>Thème</h4>
+                                    <p>Mode clair / sombre</p>
+                                </div>
+                                <div class="setting-toggle">
+                                    <div class="theme-toggle-setting" id="theme-toggle-setting">
+                                        <div class="theme-toggle-slider">
+                                            <i class="fas fa-sun theme-icon light"></i>
+                                            <i class="fas fa-moon theme-icon dark"></i>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
 
@@ -1623,6 +1635,14 @@ BP 20000 Libreville</div>
         </div>
     </div>
 
+    <!-- Bibliothèque pour génération PDF -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script>
+        // Fallback si le CDN principal ne fonctionne pas
+        if (!window.jsPDF) {
+            document.write('<script src="https://unpkg.com/jspdf@2.5.1/dist/jspdf.umd.min.js"><\/script>');
+        }
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
