--- a/index.html
+++ b/index.html
@@ -99,16 +99,16 @@
                     <div class="clouds-background"></div>
                     <div class="balance-content">
                         <div class="balance-title">Solde principal</div>
-                        <div class="balance-amount"><span class="currency-symbol">F</span> <span class="currency-code">cfa</span> 780 245,<small>00</small></div>
+                        <div class="balance-amount"><span class="currency-symbol">F</span> <span class="currency-code">CFA</span> 780 245,<small>00</small></div>
                         <div class="balance-details">
                             <div class="balance-detail">
                                 <div>Revenus mensuels</div>
-                                <div class="detail-value"><span class="currency-symbol">F</span> <span class="currency-code">cfa</span> 245 200,<small>00</small></div>
+                                <div class="detail-value"><span class="currency-symbol">F</span> <span class="currency-code">CFA</span> 245 200,<small>00</small></div>
                             </div>
                             <div class="divider"></div>
                             <div class="balance-detail">
                                 <div>Dépenses mensuelles</div>
-                                <div class="detail-value"><span class="currency-symbol">F</span> <span class="currency-code">cfa</span> 133 274,<small>00</small></div>
+                                <div class="detail-value"><span class="currency-symbol">F</span> <span class="currency-code">CFA</span> 133 274,<small>00</small></div>
                             </div>
                         </div>
                     </div>
@@ -144,7 +144,6 @@
                 <div class="transactions-section">
                     <div class="section-header">
                         <h3>Dernières transactions</h3>
-                        <a onclick="switchTab('transactions')">Tout voir</a>
                     </div>
                     <div class="transactions-list" id="transactions-list"></div>
                 </div>
@@ -220,7 +219,7 @@
                         </div>
                         <div class="card-info">
                             <div class="card-name">Plafond de paiement</div>
-                            <div class="card-meta">F <h6>cfa</h6> 500 000 / jour</div>
+                            <div class="card-meta">F <h6>CFA</h6> 500 000 / jour</div>
                         </div>
                         <div class="card-toggle">
                             <i class="fas fa-chevron-right"></i>
@@ -233,7 +232,7 @@
                         </div>
                         <div class="card-info">
                             <div class="card-name">Plafond de retrait</div>
-                            <div class="card-meta">F <h6>cfa</h6> 200 000 / jour</div>
+                            <div class="card-meta">F <h6>CFA</h6> 200 000 / jour</div>
                         </div>
                         <div class="card-toggle">
                             <i class="fas fa-chevron-right"></i>
