--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
                     <div class="clouds-background"></div>
                     <div class="balance-content">
                         <div class="balance-title">Solde principal</div>
-                        <div class="balance-amount sharp-text-mobile" style="font-family: system-ui, -apple-system, sans-serif; font-weight: 600;">FCFA 780 245,<small>00</small></div>
+                        <div class="balance-amount mobile-crisp-text" id="balance-display">
+                            <!-- Le texte sera injecté par JavaScript -->
+                        </div>
                         <div class="balance-details">
                             <div class="balance-detail">
                                 <div>Revenus mensuels</div>
