--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                         </div>
                         <div class="card-info">
                             <div class="card-name">Plafond de paiement</div>
-                            <div class="card-meta">F <h6>CFA</h6> 500 000 / jour</div>
+                            <div class="card-meta">F<h6>cfa</h6> 500 000 / jour</div>
                         </div>
                         <div class="card-toggle">
                             <i class="fas fa-chevron-right"></i>
@@ -241,7 +241,7 @@
                         </div>
                         <div class="card-info">
                             <div class="card-name">Plafond de retrait</div>
-                            <div class="card-meta">F <h6>CFA</h6> 200 000 / jour</div>
+                            <div class="card-meta">F<h6>cfa</h6> 200 000 / jour</div>
                         </div>
                         <div class="card-toggle">
                             <i class="fas fa-chevron-right"></i>
@@ -346,16 +346,16 @@
                         <div class="input-field">
                             <input type="number" placeholder="Entrez le nouveau montant" id="new-payment-limit" min="50000" max="1000000" step="25000">
                         </div>
-                        <div class="input-hint">Minimum: 50 000 FCFA - Maximum: 1 000 000 FCFA</div>
+                        <div class="input-hint">Minimum: 50 000 Fcfa - Maximum: 1 000 000 Fcfa</div>
                     </div>
 
                     <div class="preset-limits">
                         <h4>Plafonds suggérés</h4>
                         <div class="preset-buttons">
-                            <button class="preset-btn" onclick="setPaymentLimit(250000)">250 000 FCFA</button>
-                            <button class="preset-btn active" onclick="setPaymentLimit(500000)">500 000 FCFA</button>
-                            <button class="preset-btn" onclick="setPaymentLimit(750000)">750 000 FCFA</button>
-                            <button class="preset-btn" onclick="setPaymentLimit(1000000)">1 000 000 FCFA</button>
+                            <button class="preset-btn" onclick="setPaymentLimit(250000)">250 000 Fcfa</button>
+                            <button class="preset-btn active" onclick="setPaymentLimit(500000)">500 000 Fcfa</button>
+                            <button class="preset-btn" onclick="setPaymentLimit(750000)">750 000 Fcfa</button>
+                            <button class="preset-btn" onclick="setPaymentLimit(1000000)">1 000 000 Fcfa</button>
                         </div>
                     </div>
 
@@ -437,16 +437,16 @@
                         <div class="input-field">
                             <input type="number" placeholder="Entrez le nouveau montant" id="new-withdrawal-limit" min="25000" max="500000" step="25000">
                         </div>
-                        <div class="input-hint">Minimum: 25 000 FCFA - Maximum: 500 000 FCFA</div>
+                        <div class="input-hint">Minimum: 25 000 Fcfa - Maximum: 500 000 Fcfa</div>
                     </div>
 
                     <div class="preset-limits">
                         <h4>Plafonds suggérés</h4>
                         <div class="preset-buttons">
-                            <button class="preset-btn" onclick="setWithdrawalLimit(100000)">100 000 FCFA</button>
-                            <button class="preset-btn active" onclick="setWithdrawalLimit(200000)">200 000 FCFA</button>
-                            <button class="preset-btn" onclick="setWithdrawalLimit(300000)">300 000 FCFA</button>
-                            <button class="preset-btn" onclick="setWithdrawalLimit(500000)">500 000 FCFA</button>
+                            <button class="preset-btn" onclick="setWithdrawalLimit(100000)">100 000 Fcfa</button>
+                            <button class="preset-btn active" onclick="setWithdrawalLimit(200000)">200 000 Fcfa</button>
+                            <button class="preset-btn" onclick="setWithdrawalLimit(300000)">300 000 Fcfa</button>
+                            <button class="preset-btn" onclick="setWithdrawalLimit(500000)">500 000 Fcfa</button>
                         </div>
                     </div>
 
