--- a/index.html
+++ b/index.html
@@ -1519,6 +1519,155 @@ BP 20000 Libreville</div>
                             <!-- Autres partenaires... -->
                         </div>
                     </div>
+
+                    <!-- Section Partenaires Premium avec logos -->
+                    <div class="premium-partners-section">
+                        <h3>🚀 Partenaires Premium</h3>
+                        <p class="section-subtitle">Bénéficiez d'avantages exclusifs avec nos partenaires internationaux</p>
+                        
+                        <div class="premium-partners-grid">
+                            <!-- Microsoft -->
+                            <div class="premium-partner-card" onclick="openPremiumPartner('microsoft')" data-partner="microsoft">
+                                <div class="partner-logo-container">
+                                    <svg class="partner-logo-svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                                        <rect width="40" height="40" fill="#F25022"/>
+                                        <rect x="50" width="40" height="40" fill="#7FBA00"/>
+                                        <rect y="50" width="40" height="40" fill="#00A4EF"/>
+                                        <rect x="50" y="50" width="40" height="40" fill="#FFB900"/>
+                                    </svg>
+                                </div>
+                                <div class="partner-name">Microsoft</div>
+                                <div class="partner-offer">-20%</div>
+                                <div class="partner-category">Tech & Cloud</div>
+                            </div>
+
+                            <!-- Nike -->
+                            <div class="premium-partner-card" onclick="openPremiumPartner('nike')" data-partner="nike">
+                                <div class="partner-logo-container">
+                                    <svg class="partner-logo-svg" viewBox="0 0 100 40" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M78.4 8.5c-4.8 0-9.3 2.1-12.4 5.8L50 32l16-17.7c2.1-2.3 5.1-3.6 8.4-3.6 6.2 0 11.2 5 11.2 11.2s-5 11.2-11.2 11.2c-2.8 0-5.4-1-7.4-2.9L50 48l32.6-36.1c1.3-1.4 3.1-2.2 5.1-2.2 3.9 0 7 3.1 7 7s-3.1 7-7 7c-1.7 0-3.2-0.6-4.4-1.7L78.4 8.5z" fill="#FF6900"/>
+                                    </svg>
+                                </div>
+                                <div class="partner-name">Nike</div>
+                                <div class="partner-offer">-15%</div>
+                                <div class="partner-category">Sport & Mode</div>
+                            </div>
+
+                            <!-- Tesla -->
+                            <div class="premium-partner-card" onclick="openPremiumPartner('tesla')" data-partner="tesla">
+                                <div class="partner-logo-container">
+                                    <svg class="partner-logo-svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M50 10L20 30v40l30 20 30-20V30L50 10zm0 15l20 15v25l-20 15-20-15V40l20-15z" fill="#CC0000"/>
+                                        <text x="50" y="55" text-anchor="middle" font-family="Arial, sans-serif" font-size="16" font-weight="bold" fill="white">T</text>
+                                    </svg>
+                                </div>
+                                <div class="partner-name">Tesla</div>
+                                <div class="partner-offer">-10%</div>
+                                <div class="partner-category">Auto & Tech</div>
+                            </div>
+
+                            <!-- Metanoïa -->
+                            <div class="premium-partner-card" onclick="openPremiumPartner('metanoia')" data-partner="metanoia">
+                                <div class="partner-logo-container">
+                                    <svg class="partner-logo-svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                                        <circle cx="50" cy="50" r="40" fill="#2E86AB" stroke="#A23B72" stroke-width="3"/>
+                                        <text x="50" y="42" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="white">META</text>
+                                        <text x="50" y="58" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="white">NOÏA</text>
+                                    </svg>
+                                </div>
+                                <div class="partner-name">Metanoïa</div>
+                                <div class="partner-offer">-25%</div>
+                                <div class="partner-category">Formation</div>
+                            </div>
+
+                            <!-- Airtel -->
+                            <div class="premium-partner-card" onclick="openPremiumPartner('airtel')" data-partner="airtel">
+                                <div class="partner-logo-container">
+                                    <svg class="partner-logo-svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                                        <ellipse cx="50" cy="50" rx="45" ry="20" fill="#ED1C24"/>
+                                        <text x="50" y="55" text-anchor="middle" font-family="Arial, sans-serif" font-size="14" font-weight="bold" fill="white">airtel</text>
+                                    </svg>
+                                </div>
+                                <div class="partner-name">Airtel</div>
+                                <div class="partner-offer">-30%</div>
+                                <div class="partner-category">Télécom</div>
+                            </div>
+
+                            <!-- Reebok -->
+                            <div class="premium-partner-card" onclick="openPremiumPartner('reebok')" data-partner="reebok">
+                                <div class="partner-logo-container">
+                                    <svg class="partner-logo-svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                                        <polygon points="20,70 50,30 80,70" fill="#005BBB"/>
+                                        <text x="50" y="85" text-anchor="middle" font-family="Arial, sans-serif" font-size="10" font-weight="bold" fill="#005BBB">REEBOK</text>
+                                    </svg>
+                                </div>
+                                <div class="partner-name">Reebok</div>
+                                <div class="partner-offer">-18%</div>
+                                <div class="partner-category">Sport</div>
+                            </div>
+
+                            <!-- Air France -->
+                            <div class="premium-partner-card" onclick="openPremiumPartner('airfrance')" data-partner="airfrance">
+                                <div class="partner-logo-container">
+                                    <svg class="partner-logo-svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                                        <circle cx="50" cy="50" r="40" fill="#002157"/>
+                                        <path d="M30 45 L50 35 L70 45 L60 55 L50 50 L40 55 Z" fill="white"/>
+                                        <text x="50" y="75" text-anchor="middle" font-family="Arial, sans-serif" font-size="8" font-weight="bold" fill="white">AIR FRANCE</text>
+                                    </svg>
+                                </div>
+                                <div class="partner-name">Air France</div>
+                                <div class="partner-offer">-12%</div>
+                                <div class="partner-category">Voyage</div>
+                            </div>
+
+                            <!-- Samsung -->
+                            <div class="premium-partner-card" onclick="openPremiumPartner('samsung')" data-partner="samsung">
+                                <div class="partner-logo-container">
+                                    <svg class="partner-logo-svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                                        <ellipse cx="50" cy="50" rx="45" ry="25" fill="#1428A0"/>
+                                        <text x="50" y="55" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="white">SAMSUNG</text>
+                                    </svg>
+                                </div>
+                                <div class="partner-name">Samsung</div>
+                                <div class="partner-offer">-22%</div>
+                                <div class="partner-category">Tech</div>
+                            </div>
+
+                            <!-- Apple -->
+                            <div class="premium-partner-card" onclick="openPremiumPartner('apple')" data-partner="apple">
+                                <div class="partner-logo-container">
+                                    <svg class="partner-logo-svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M50 15c10 0 18 8 18 18v2c0 15-8 27-18 27s-18-12-18-27v-2c0-10 8-18 18-18zm8-5c2-3 3-6 3-9 0-1-1-1-1 0-1 2-2 4-4 6-2 2-4 3-6 3-1 0-1 1 0 1 3 0 6-1 8-1z" fill="#A6B1B7"/>
+                                    </svg>
+                                </div>
+                                <div class="partner-name">Apple</div>
+                                <div class="partner-offer">-8%</div>
+                                <div class="partner-category">Premium Tech</div>
+                            </div>
+
+                            <!-- Uber -->
+                            <div class="premium-partner-card" onclick="openPremiumPartner('uber')" data-partner="uber">
+                                <div class="partner-logo-container">
+                                    <svg class="partner-logo-svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                                        <circle cx="50" cy="50" r="40" fill="#000000"/>
+                                        <circle cx="50" cy="40" r="8" fill="white"/>
+                                        <rect x="42" y="50" width="16" height="20" rx="8" fill="white"/>
+                                    </svg>
+                                </div>
+                                <div class="partner-name">Uber</div>
+                                <div class="partner-offer">-15%</div>
+                                <div class="partner-category">Transport</div>
+                            </div>
+                        </div>
+
+                        <!-- Call to action -->
+                        <div class="partners-cta">
+                            <button class="cta-button" onclick="showAllPremiumPartners()">
+                                <i class="fas fa-store"></i>
+                                Voir tous nos partenaires
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
 
